--- a/tests/users-ref.kv
+++ b/tests/users-ref.kv
@@ -1,4 +1,11 @@
-u100 jane@gmail.com
-u101 joe@netcom.com
-u102 sally@struthers
-u103 dpw@rcs.com
+u100 debra.sweeney-36@williams.com
+u101 sergio.miller-50@hall-bennett.com
+u102 karla.gibbs-82@brown.com
+u103 charles.barry-20@brooks-martinez.info
+u104 daniel.anthony-43@williamson.org
+u105 derek.decker-86@valdez-gonzalez.org
+u106 sean.barry-56@jimenez.info
+u107 mary.west-61@torres.com
+u108 michael.beltran-88@thomas.com
+u109 alicia.brown-86@smith-mays.biz
+u110 dpw@rcs.com
